test/test_11912921_10.out
Error type 9 at Line 9: a function’s arguments mismatch the declared parameters: too much parameters
Error type 2 at Line 10: a function is invoked without a definition: comp
