test/test_11912921_10.spl
int sum(int x, int y)
{
    return x + y;
}

int test_10()
{
    int x = 3, y = 2;
    x = sum(x, x, y);
    return comp(x, y);
}

int comp(int x, int y)
{
    return !(x < y);
}
